# sebastjancizel.github.io

./: .gitignore  LICENSE  Makefile  README.md  about.html  asset-manifest.json  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  research.html  resumeData.json  test-deployment.txt
.github/workflows/: deploy.yml
blog/: .authors.yml  index.md
blog/posts/: welcome.md
css/: layout.css  style.css
docs/: about.md  index.md  portfolio.md  research.md
docs/stylesheets/: extra.css
js/: main.js
public/: index.html  resumeData.json
public/css/: layout.css  media-queries.css
scripts/: build.sh  dev.sh  setup.sh
src/: App.js
src/Components/: About.js  Footer.js  Header.js  Portfolio.js  Research.js  Resume.js
static/js/: 2.418b825d.chunk.js  2.418b825d.chunk.js.map  2.4d5e0ad3.chunk.js  2.4d5e0ad3.chunk.js.LICENSE.txt  2.4d5e0ad3.chunk.js.map  2.c8609ae3.chunk.js  2.c8609ae3.chunk.js.LICENSE.txt  2.c8609ae3.chunk.js.map  2.cc5e26f4.chunk.js  2.cc5e26f4.chunk.js.LICENSE.txt  2.cc5e26f4.chunk.js.map  2.e255ecc0.chunk.js  2.e255ecc0.chunk.js.LICENSE.txt  2.e255ecc0.chunk.js.map  2.ed577761.chunk.js  2.ed577761.chunk.js.LICENSE.txt  2.ed577761.chunk.js.map  main.0eafbcab.chunk.js  main.0eafbcab.chunk.js.map  main.15ff39c6.chunk.js  main.15ff39c6.chunk.js.map  main.330c090a.chunk.js  main.330c090a.chunk.js.map  main.342de7ed.chunk.js  main.342de7ed.chunk.js.map  main.3e6fd8c4.chunk.js  main.3e6fd8c4.chunk.js.map  main.5617c88f.chunk.js  main.5617c88f.chunk.js.map  main.60c76448.chunk.js  main.60c76448.chunk.js.map  (+18 more)
